[package]
name = "anarchic-image-hosting-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["multipart", "json"] }
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.20",  features = ["derive"] }
clap_derive = "=4.5.18"
serde = { version = "1.0.210", features = ["derive"] }
json5 = "0.4.1"
log = "0.4.22"
env_logger = "0.11.5"